Closed Bug 1967026 Opened 1 year ago Closed 2 months ago

VoiceOver does not expose aria-brailleroledescription

Categories

(Core :: Disability Access APIs, defect)

Desktop
macOS
defect

Tracking

()

RESOLVED FIXED
150 Branch
Tracking Status
firefox150 --- fixed

People

(Reporter: morgan, Assigned: b3nbinoh, Mentored)

References

(Blocks 1 open bug)

Details

(Keywords: good-first-bug)

Attachments

(2 files, 2 obsolete files)

STR:

  1. Enable VoiceOver
  2. Ensure the braille viewer is turned on (VoiceOver Utility.app > Visuals > Panels & menus > Braille: "on")
  3. Load data:text/html,<article aria-roledescription="slide"aria-brailleroledescription="sld"aria-labelledby="slide1heading"><h1 id="slide1heading">Welcome to my talk</h1><img alt="Me" src="images/me.jpg" /></article>
  4. Focus the <article> with VoiceOver

Expected:
The braille panel should display "Welcome to my talk, sld"

Actual:
The braille panel displays "Welcome to my talk, slide"

This works in Safari. Per the spec we should expose this via AXBrailleRoleDescription

Blocks: aria
Severity: -- → S3
Keywords: good-first-bug
Mentor: mreschenberg

Hey, i'm a new contributor. I'm looking into this one ☺

(In reply to Ben from comment #1)

Hey, i'm a new contributor. I'm looking into this one ☺

Hi Ben, thank you! I've assigned this bug to you.
Please use the requestion-information-from function (also called 'need info') to request help from me as needed (note, I won't be notified for new comments, only comments with 'need info's directed to me)

To start, I'd recommend looking at bug 1862999 and its associated patch to see how we traditionally add support for new attributes on macOS. Your patch should include similar function additions (you'll need a new mox- function for your attribute) as well as a test. The content of your added function will differ from the one in the patch, but may use existing utility functions like getAccAttr.

Assignee: nobody → b3nbinoh

Hi Morgan - I'm also a new contributor, working with Ben on this bug together. I am unclear on the meaning of "Focus on the article" in the directions to recreate the bug. My attempt to VoiceOver the text and image read the text the same way in both Firefox and Safari. Neither one mentioned the slide or sld as listed in the "Expected/Actual" outcomes.

Flags: needinfo?(mreschenberg)

(In reply to Sally Frye from comment #3)

Hi Morgan - I'm also a new contributor, working with Ben on this bug together. I am unclear on the meaning of "Focus on the article" in the directions to recreate the bug. My attempt to VoiceOver the text and image read the text the same way in both Firefox and Safari. Neither one mentioned the slide or sld as listed in the "Expected/Actual" outcomes.

Hi Sally, nice to meet you :)
I'll add a screen recording for this so you have some more context for how to test. I've just verified this is still broken in Firefox and working in Safari. Let me know if you have questions, and thank you for your help !

Flags: needinfo?(mreschenberg)

I see you've posted a WIP patch, I'll hold off on reviewing until you add myself (morgan) as a reviewer and hit "request review" in the phabricator UI.
Thanks for your work :)

Attachment #9550403 - Attachment is obsolete: true

We used Bug 1862999 as a template for making the adjustments to support Aria Braille Role Description, however we are not seeing any changes when manually re-creating the bug.

Apologies, there are technically 2 Phabricator pages now. The older version should now be abandoned, it's just a git file management error on my end. The proper one is the latter, D286383.

Would love for someone to take a look at what we've done so far and point us in a better direction. Trying to get a handle on where best to look for info.

Flags: needinfo?(mreschenberg)
Attachment #9550496 - Attachment description: WIP: Bug 1967026 - Adding aria-braille role description support for VoiceOver → Bug 1967026 - Adding aria-braille role description support for VoiceOver r?morgan!

Found the error! It was a naming inconsistency in the MOXAccessibleProtocol.h file. It passes the local test we created as well as our manual recreation of the bug based on your video. It's ready for official review.

We ran the other mac/ folder tests and only had 1 error, resulting from a TIMEOUT in a test within browser_text_input.js. Not sure if it's related to the bug in any way.

Flags: needinfo?(mreschenberg)

(In reply to Sally Frye from comment #10)

Found the error! It was a naming inconsistency in the MOXAccessibleProtocol.h file. It passes the local test we created as well as our manual recreation of the bug based on your video. It's ready for official review.

We ran the other mac/ folder tests and only had 1 error, resulting from a TIMEOUT in a test within browser_text_input.js. Not sure if it's related to the bug in any way.

Awesome, thanks for taking the time to look into the issue :)
Don't worry about that test failure, I'm reasonably certain it is unrelated to your work. Just in case, I've submitted a try run here which will run your test and the rest of our mac tests on our array of remote machines. If anything comes back flagged, I'll let you know.

In the meantime, I left a few comments on your patch. Please address them and re-push when you have some time. Thanks again!

Attachment #9550496 - Attachment description: Bug 1967026 - Adding aria-braille role description support for VoiceOver r?morgan! → Bug 1967026 - Add aria-braille role description support for VoiceOver r?morgan!
Attachment #9551208 - Attachment is obsolete: true
Status: NEW → RESOLVED
Closed: 2 months ago
Resolution: --- → FIXED
Target Milestone: --- → 150 Branch
QA Whiteboard: [qa-triage-done-c151/b150]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: