Bug 1967026 - Add aria-braille role description support for VoiceOver r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D286383